Fixed Chrome alignment

--- a/google-homepage.css
+++ b/google-homepage.css
@@ -16,7 +16,7 @@ nav{
     height:30px;
     display:flex;
     flex-direction: row;
-    justify-content:right;
+    justify-content:flex-end;
     font-size: 13px;
     padding-top: 16px;
 }
